syntax = "proto3";

package greet;

option java_package = "id.proto.greet";
option java_multiple_files  = true;

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetManyTimesRequest {
  Greeting greeting  =1;
}

message GreetManyTimesResponse {
  string result  =1;
}

service GreetService {
  // Server Stream
  rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};
}